fix class selector, remove margin, adjust text align

--- a/src/assets/scss/Projects.scss
+++ b/src/assets/scss/Projects.scss
@@ -1,14 +1,14 @@
 @use "../variables" as *;
 
-.projects-container {
+.projects-cont {
     background-color: $secondary;
     // background-color: #111717;
     padding: 20px;
-    margin-top: $nav-height;
     font-size: 16pt;
     h2 {
         color: $main;
         // color: #4EA699;
+        text-align: left;
         font-size: 24pt;
         margin-bottom: 20px;
     }
